backend/okd/route-esp32-tls.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nl14-backend-esp32-tls
  namespace: itip-nl-14
  annotations:
    haproxy.router.openshift.io/timeout: 30s
spec:
  host: esp32-backend-itip-nl-14.apps.okd.ucll.cloud
  to:
    kind: Service
    name: backend
    weight: 100
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
